# demo/docs/swagger.yaml
@@ -68,6 +68,27 @@ definitions:
         description: 1 缺失 2 错误 3 正确
         type: integer
     type: object
+  rest.ClassTradeInfo:
+    properties:
+      in_amount:
+        description: 收入金额
+        type: integer
+      name:
+        description: 对手方名称
+        type: string
+      out_amount:
+        description: 支出金额
+        type: integer
+    type: object
+  rest.ClassTradeInfo1:
+    properties:
+      amount:
+        description: 交易金额
+        type: integer
+      name:
+        description: 对手方名称
+        type: string
+    type: object
   rest.InterestReportI:
     properties:
       estimate_interest:
@@ -84,6 +105,200 @@ definitions:
         type: string
       trade_time:
         description: 交易日期 后端格式化之后返回
+        type: string
+    type: object
+  rest.JydsClassResp:
+    properties:
+      income:
+        allOf:
+        - $ref: '#/definitions/rest.JydsClassSummaryI'
+        description: 收入
+      pay:
+        allOf:
+        - $ref: '#/definitions/rest.JydsClassSummaryP'
+        description: 支持
+      summary:
+        allOf:
+        - $ref: '#/definitions/rest.JydsClassSummary'
+        description: 汇总
+    type: object
+  rest.JydsClassSummary:
+    properties:
+      institutional_clients:
+        description: 机构客户数量
+        type: integer
+      natural_person:
+        description: 自然人数量
+        type: integer
+      other:
+        description: 其他数量
+        type: integer
+      own:
+        description: 自己数量
+        type: integer
+      trade_info:
+        description: 对手方交易明细 top8
+        items:
+          $ref: '#/definitions/rest.ClassTradeInfo'
+        type: array
+    type: object
+  rest.JydsClassSummaryI:
+    properties:
+      institutional_clients:
+        description: 机构客户数量
+        type: integer
+      natural_person:
+        description: 自然人数量
+        type: integer
+      other:
+        description: 其他数量
+        type: integer
+      own:
+        description: 自己数量
+        type: integer
+      trade_info:
+        description: 对手方收入明细 top8
+        items:
+          $ref: '#/definitions/rest.ClassTradeInfo1'
+        type: array
+    type: object
+  rest.JydsClassSummaryP:
+    properties:
+      institutional_clients:
+        description: 机构客户数量
+        type: integer
+      natural_person:
+        description: 自然人数量
+        type: integer
+      other:
+        description: 其他数量
+        type: integer
+      own:
+        description: 自己数量
+        type: integer
+      trade_info:
+        description: 对手方支出明细 top8
+        items:
+          $ref: '#/definitions/rest.ClassTradeInfo1'
+        type: array
+    type: object
+  rest.JydsMonitorObjectResp:
+    properties:
+      income:
+        allOf:
+        - $ref: '#/definitions/rest.JydsMonitorObjectSummary'
+        description: 收入
+      pay:
+        allOf:
+        - $ref: '#/definitions/rest.JydsMonitorObjectSummary'
+        description: 支出
+      summary:
+        allOf:
+        - $ref: '#/definitions/rest.JydsMonitorObjectSummary'
+        description: 汇总
+    type: object
+  rest.JydsMonitorObjectSummary:
+    properties:
+      asset_management:
+        description: 资产管理
+        type: integer
+      cultural_artistic_items:
+        description: 文化艺术品
+        type: integer
+      finance:
+        description: 金融
+        type: integer
+      financial_assets_equities:
+        description: 金融资产权益
+        type: integer
+      financial_services:
+        description: 金融服务
+        type: integer
+      financing:
+        description: 融资
+        type: integer
+      guarantee:
+        description: 担保
+        type: integer
+      investment:
+        description: 投资
+        type: integer
+      lease:
+        description: 租赁
+        type: integer
+      pawn:
+        description: 地产
+        type: integer
+      precious_metals_investment:
+        description: 贵金属投资
+        type: integer
+      property_purchase:
+        description: 置业
+        type: integer
+      real_estate:
+        description: 房地产
+        type: integer
+      small_loan:
+        description: 小贷
+        type: integer
+      total_num:
+        description: 所有流水的条数
+        type: integer
+      trade_info:
+        description: 所有流水详情
+        items:
+          $ref: '#/definitions/rest.MonitorTradeInfo'
+        type: array
+      wealth_management:
+        description: 财富管理
+        type: integer
+    type: object
+  rest.JydsOverviewResp:
+    properties:
+      income:
+        description: 收入
+        items:
+          $ref: '#/definitions/rest.JydsOverviewTradeInfo'
+        type: array
+      income_number:
+        description: 收入流水笔数 这里默认15条 如果少于15 例如只有9条那组件中第三页就不需要了
+        type: integer
+      pay:
+        description: 支出
+        items:
+          $ref: '#/definitions/rest.JydsOverviewTradeInfo'
+        type: array
+      pay_number:
+        description: 支出流水笔数 这里默认15条 如果少于15 例如只有9条那组件中第三页就不需要了
+        type: integer
+      summary:
+        description: 汇总
+        items:
+          $ref: '#/definitions/rest.JydsOverviewTradeInfo'
+        type: array
+      summary_number:
+        description: 流水汇总笔数 这里默认15条 如果少于15 例如只有9条那组件中第三页就不需要了
+        type: integer
+    type: object
+  rest.JydsOverviewTradeInfo:
+    properties:
+      account:
+        description: 交易账号
+        type: string
+      amount:
+        description: 交易金额
+        type: integer
+      id:
+        description: 序号
+        type: integer
+      name:
+        description: 交易户名
+        type: string
+      trade_number:
+        description: 交易笔数
+        type: integer
+      trade_time:
+        description: 交易时间段
         type: string
     type: object
   rest.LsyzAResp:
@@ -162,6 +377,24 @@ definitions:
       total_num:
         description: 摘要总月数
         type: integer
+    type: object
+  rest.MonitorTradeInfo:
+    properties:
+      account:
+        description: 交易账号
+        type: string
+      name:
+        description: 交易户名
+        type: string
+      signal:
+        description: 预警信号
+        type: string
+      trade_number:
+        description: 交易笔数
+        type: integer
+      trade_time:
+        description: 交易时间
+        type: string
     type: object
   rest.NSMInfo:
     properties:
@@ -258,6 +491,134 @@ definitions:
 info:
   contact: {}
 paths:
+  /edapi/bankbills/analyse/jyds/counterparty/class:
+    get:
+      description: 交易对手-对手方分类
+      parameters:
+      - description: 当前项目下筛选的文档 多个以英文逗号','拼接 不超过30个
+        in: query
+        name: doc_ids
+        type: string
+      - description: 结束日期 2022-07-24
+        in: query
+        name: end_date
+        type: string
+      - description: 项目id
+        in: query
+        name: project_id
+        required: true
+        type: string
+      - description: 起始时间 2022-07-23
+        in: query
+        name: start_date
+        type: string
+      - description: 用户token
+        in: query
+        name: token
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.Result1'
+            - properties:
+                data:
+                  $ref: '#/definitions/rest.JydsClassResp'
+              type: object
+  /edapi/bankbills/analyse/jyds/counterparty/overview:
+    get:
+      description: 交易对手-对手方概览
+      parameters:
+      - description: 当前项目下筛选的文档 多个以英文逗号','拼接 不超过30个
+        in: query
+        name: doc_ids
+        type: string
+      - description: 结束日期 2022-07-24
+        in: query
+        name: end_date
+        type: string
+      - description: 默认5条/页
+        in: query
+        minimum: 5
+        name: limit
+        type: integer
+      - description: 第一页开始
+        in: query
+        minimum: 1
+        name: page
+        type: integer
+      - description: 项目id
+        in: query
+        name: project_id
+        required: true
+        type: string
+      - description: 起始时间 2022-07-23
+        in: query
+        name: start_date
+        type: string
+      - description: 用户token
+        in: query
+        name: token
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.Result1'
+            - properties:
+                data:
+                  $ref: '#/definitions/rest.JydsOverviewResp'
+              type: object
+  /edapi/bankbills/analyse/jyds/monitor_object:
+    get:
+      description: 交易对手-重点监测对象
+      parameters:
+      - description: 当前项目下筛选的文档 多个以英文逗号','拼接 不超过30个
+        in: query
+        name: doc_ids
+        type: string
+      - description: 结束日期 2022-07-24
+        in: query
+        name: end_date
+        type: string
+      - description: 默认5条/页
+        in: query
+        minimum: 5
+        name: limit
+        type: integer
+      - description: 第一页开始
+        in: query
+        minimum: 1
+        name: page
+        type: integer
+      - description: 项目id
+        in: query
+        name: project_id
+        required: true
+        type: string
+      - description: 起始时间 2022-07-23
+        in: query
+        name: start_date
+        type: string
+      - description: 用户token
+        in: query
+        name: token
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.Result1'
+            - properties:
+                data:
+                  $ref: '#/definitions/rest.JydsMonitorObjectResp'
+              type: object
   /edapi/bankbills/analyse/lsyz/authenticity:
     get:
       description: 流水验证-数据真实性
@@ -342,12 +703,12 @@ paths:
         in: query
         name: end_date
         type: string
-      - description: 存在异常项 默认5条/页
+      - description: 默认5条/页
         in: query
         minimum: 5
         name: limit
         type: integer
-      - description: 存在异常项 第一页开始
+      - description: 第一页开始
         in: query
         minimum: 1
         name: page
@@ -388,12 +749,12 @@ paths:
         in: query
         name: end_date
         type: string
-      - description: 存在异常项 默认5条/页
+      - description: 默认5条/页
         in: query
         minimum: 5
         name: limit
         type: integer
-      - description: 存在异常项 第一页开始
+      - description: 第一页开始
         in: query
         minimum: 1
         name: page
@@ -478,12 +839,12 @@ paths:
         in: query
         name: keyword
         type: string
-      - description: 存在异常项 默认5条/页
+      - description: 默认5条/页
         in: query
         minimum: 5
         name: limit
         type: integer
-      - description: 存在异常项 第一页开始
+      - description: 第一页开始
         in: query
         minimum: 1
         name: page
