# demo/internal/rest/response.go
@@ -146,3 +146,103 @@ type ProjectListI struct {
 	DocCount   int64  `json:"doc_count"`   // 当前项目下文件总数
 	Type       int64  `json:"type"`        // 项目类型
 }
+
+// JydsOverviewResp 交易对手-对手方概览
+type JydsOverviewResp struct {
+	Summary       []JydsOverviewTradeInfo `json:"summary"`        // 汇总
+	SummaryNumber int64                   `json:"summary_number"` // 流水汇总笔数 这里默认15条 如果少于15 例如只有9条那组件中第三页就不需要了
+	Income        []JydsOverviewTradeInfo `json:"income"`         // 收入
+	IncomeNumber  int64                   `json:"income_number"`  // 收入流水笔数 这里默认15条 如果少于15 例如只有9条那组件中第三页就不需要了
+	Pay           []JydsOverviewTradeInfo `json:"pay"`            // 支出
+	PayNumber     int64                   `json:"pay_number"`     // 支出流水笔数 这里默认15条 如果少于15 例如只有9条那组件中第三页就不需要了
+}
+
+type JydsOverviewTradeInfo struct {
+	Id          int64  `json:"id"`           // 序号
+	Name        string `json:"name"`         // 交易户名
+	Account     string `json:"account"`      // 交易账号
+	Amount      int64  `json:"amount"`       // 交易金额
+	TradeTime   string `json:"trade_time"`   // 交易时间段
+	TradeNumber int64  `json:"trade_number"` // 交易笔数
+}
+
+// JydsClassResp 交易对手-对手方分类
+type JydsClassResp struct {
+	Summary JydsClassSummary  `json:"summary"` // 汇总
+	Income  JydsClassSummaryI `json:"income"`  // 收入
+	Pay     JydsClassSummaryP `json:"pay"`     // 支持
+}
+
+type JydsClassSummary struct {
+	CounterpartyClass
+	TradeInfo []ClassTradeInfo `json:"trade_info"` // 对手方交易明细 top8
+}
+
+type ClassTradeInfo struct {
+	Name      string `json:"name"`       // 对手方名称
+	OutAmount int64  `json:"out_amount"` // 支出金额
+	InAmount  int64  `json:"in_amount"`  // 收入金额
+}
+
+type JydsClassSummaryI struct {
+	CounterpartyClass
+	TradeInfo []ClassTradeInfo1 `json:"trade_info"` // 对手方收入明细 top8
+}
+
+type ClassTradeInfo1 struct {
+	Name   string `json:"name"`   // 对手方名称
+	Amount int64  `json:"amount"` // 交易金额
+}
+
+type JydsClassSummaryP struct {
+	CounterpartyClass
+	TradeInfo []ClassTradeInfo1 `json:"trade_info"` // 对手方支出明细 top8
+}
+
+// CounterpartyClass 对手方分类
+type CounterpartyClass struct {
+	InstitutionalClients int64 `json:"institutional_clients"` // 机构客户数量
+	NaturalPerson        int64 `json:"natural_person"`        // 自然人数量
+	Own                  int64 `json:"own"`                   // 自己数量
+	Other                int64 `json:"other"`                 // 其他数量
+}
+
+// JydsMonitorObjectResp 交易对手-重点监测对象
+type JydsMonitorObjectResp struct {
+	Summary JydsMonitorObjectSummary `json:"summary"` // 汇总
+	Income  JydsMonitorObjectSummary `json:"income"`  // 收入
+	Pay     JydsMonitorObjectSummary `json:"pay"`     // 支出
+}
+
+type JydsMonitorObjectSummary struct {
+	TradeClassType
+	TotalNum  int64              `json:"total_num"`  // 所有流水的条数
+	TradeInfo []MonitorTradeInfo `json:"trade_info"` // 所有流水详情
+}
+
+type TradeClassType struct {
+	SmallLoan                int64 `json:"small_loan"`                 // 小贷
+	Pawn                     int64 `json:"pawn"`                       // 地产
+	RealEstate               int64 `json:"real_estate"`                // 房地产
+	PropertyPurchase         int64 `json:"property_purchase"`          // 置业
+	Guarantee                int64 `json:"guarantee"`                  // 担保
+	Finance                  int64 `json:"finance"`                    // 金融
+	Investment               int64 `json:"investment"`                 // 投资
+	AssetManagement          int64 `json:"asset_management"`           // 资产管理
+	Financing                int64 `json:"financing"`                  // 融资
+	Lease                    int64 `json:"lease"`                      // 租赁
+	PreciousMetalsInvestment int64 `json:"precious_metals_investment"` //贵金属投资
+	CulturalArtisticItems    int64 `json:"cultural_artistic_items"`    // 文化艺术品
+	FinancialAssetsEquities  int64 `json:"financial_assets_equities"`  // 金融资产权益
+	FinancialServices        int64 `json:"financial_services"`         // 金融服务
+	WealthManagement         int64 `json:"wealth_management"`          // 财富管理
+
+}
+
+type MonitorTradeInfo struct {
+	Signal      string `json:"signal"`       // 预警信号
+	Name        string `json:"name"`         // 交易户名
+	Account     string `json:"account"`      // 交易账号
+	TradeTime   string `json:"trade_time"`   // 交易时间
+	TradeNumber int64  `json:"trade_number"` // 交易笔数
+}
